[build-system]
requires = ["setuptools==80.10.2"]
build-backend = "setuptools.build_meta"

[project]
name = "riskweave-backend"
version = "0.4.0"
description = "Explainable synthetic cyber-transaction intelligence API for RiskWeave AI"
requires-python = ">=3.12,<3.13"
dependencies = [
  "alembic==1.18.5",
  "argon2-cffi==25.1.0",
  "fastapi==0.139.0",
  "numpy==2.5.1",
  "psycopg[binary]==3.3.4",
  "pydantic==2.13.4",
  "pydantic-settings==2.14.2",
  "PyJWT==2.13.0",
  "scikit-learn==1.9.0",
  "sqlalchemy==2.0.51",
  "uvicorn==0.51.0",
]

[tool.setuptools.packages.find]
include = ["app*", "risk_engine*"]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers --cov=app --cov=risk_engine --cov-report=term-missing --cov-fail-under=90"
markers = [
  "integration: requires a migrated PostgreSQL database",
]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["app", "risk_engine"]

[tool.coverage.report]
exclude_also = [
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
  '\.\.\.',
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["B", "E", "F", "I", "RUF", "SIM", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["app", "risk_engine"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
pretty = true
show_error_codes = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["alembic.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["sklearn.*"]
ignore_missing_imports = true
